# SVF-Generator

./: .gitignore  CMakeLists.txt  JTAG_IEEE-Std-1149_ru.pdf:Zone.Identifier  README.md  STM32F1_Low_density_QFPN36.b  STM32F1_Low_density_QFPN36.bsd  STM32F1_Low_density_QFPN36_test.json  STM32F1_Low_density_QFPN36_test.svf  STM32F1_Med_density_LQFP48.bsd  log.txt  main  main.cpp  std_variant  svf-calc  svf-calc.cpp  svf-generator  svf-generator.cpp  version_1  version_1_1  version_1_1.cpp  version_2  version_2.cpp
Report/: Отчёт по практике.docx  Соколов А.Н. журнал практики (отзыв руководителя).docx  Соколов А.Н. журнал практики.docx
bsdl/xilinx_bsdl/: XC7A100T_FTG256.bsdl
library_pininfo/: main.cpp  pininfo.hpp
library_svf-calc/: STM32F1_Low_density_QFPN36_test.json  main  main.cpp  svf-calc.cpp
library_svf-generator/: STM32F1_Low_density_QFPN36_test.svf  getopt  getopt.cpp  main  main.cpp
library_version_1_1/: main  main.cpp  pininfo.cpp  pininfo.hpp
release/: .gitignore  CMakeLists.txt  json_pars_lib.hpp  pininfo_lib.hpp  svf-calc.cpp  svf-gen.cpp  svf-gen_lib.cpp
release/svf-calc/: CMakeLists.txt  STM32F1_Low_density_QFPN36_test.json  main.cpp  svf-calc.cpp  svf-calc.hpp
release/svf-generator/: CMakeLists.txt  json_pars_lib.cpp  json_pars_lib.hpp  main.cpp  pininfo.cpp  pininfo.hpp  pininfo_lib.cpp  svf-calc.cpp  svf-calc_lib.cpp  svf-calc_lib.hpp  svf-calculator.cpp  svf-gen.cpp  svf-gen_lib.cpp  svf-gen_lib.hpp  svf-generator.cpp  svf-generator.hpp
release/svf-generator/xilinx_bsdl/: XC5VTX240T_FF1759.bsdl
release/svf-generator_v2/: CMakeLists.txt  main.cpp  pininfo.cpp  pininfo.hpp  svf-generator_v2.cpp  svf-generator_v2.hpp
release/xilinx_bsdl/: XC5VFX100T.bsdl
test/: .gitignore
test/Report/: Отчёт по практике.docx  Соколов А.Н. журнал практики.docx
test/library_pininfo/: CMakeLists.txt  main  main.cpp  pininfo.cpp  pininfo.hpp
test/library_svf-calc/: STM32F1_Low_density_QFPN36_test.json  main
test/library_svf-generator/: svf-generator.cpp  svf-generator.hpp
test/modules_not_library/: CMakeLists.txt  svf-generator.cpp  version_1_1.cpp  version_2.cpp
test/svf-generator_v2/: CMakeLists.txt  main.cpp  pininfo.cpp  svf-generator_v2.cpp  svf-generator_v2.hpp
test/tests_programs/: STM32F1_Low_density_QFPN36_test.json  getopt  getopt.cpp  svf_generator_v2  svf_generator_v2.cpp  test  test.bsd  test.cpp  test_2  test_2.cpp  test_3  test_3.cpp  test_4  test_4.cpp  test_5  test_5.cpp  test_6  test_6.cpp  test_7  test_7.cpp  test_8  test_8.cpp  test_analyzer  test_analyzer.cpp
test/tests_programs/test_lib_2/: CMakeLists.txt  main.cpp
test/tests_programs/test_lib_2/lib1/: CMakeLists.txt  lib1.cpp  lib1.hpp
test/tests_programs/test_lib_2/lib2/: CMakeLists.txt  lib2.cpp  lib2.hpp
test/tests_programs/test_library/: CMakeLists.txt  Lib.cpp  Lib.hpp  main.cpp
